--- a/code.html
+++ b/code.html
@@ -6,7 +6,16 @@
         <title>Linktree</title>
         <link rel="stylesheet" href="style.css">
     </head>
+    <header>
+        LINKTREE
+    </header>
     <body>
-        
+        <main class="contain">
+            <table>
+                <tr>
+                    <td><img src="NaethanApollo.webp" alt="Singer"></td>
+                </tr>
+            </table>
+        </main>
     </body>
 </html>
