--- a/code.html
+++ b/code.html
@@ -15,7 +15,28 @@
                 <tr>
                     <td><img src="NaethanApollo.webp" alt="Singer"></td>
                 </tr>
+                <tr>
+                    <td>Personal Site</td>
+                </tr>
+                <tr>
+                    <td>Instagram</td>
+                </tr>
+                <tr>
+                    <td>Youtube</td>
+                </tr>
+                <tr>
+                    <td>Spotify</td>
+                </tr>
+                <tr>
+                    <td>X.com</td>
+                </tr>
+                <tr>
+                    <td>Youtube</td>
+                </tr>
             </table>
+            <footer>
+                &copy;2025 WEB DEV Workshop.All Rights Reserved
+            </footer>
         </main>
     </body>
 </html>
