--- a/code.html
+++ b/code.html
@@ -13,25 +13,21 @@
         <main class="contain">
             <table>
                 <tr>
-                    <td><img src="NaethanApollo.webp" alt="Singer"></td>
+                    <td class="photo"><img class="singer-image" src="NaethanApollo.webp" alt="Singer"></td>
                 </tr>
                 <tr>
-                    <td>Personal Site</td>
+                    <td class="Site">Personal Site</td>
                 </tr>
                 <tr>
-                    <td>Instagram</td>
+                    <td class="Instagram">Instagram</td>
+                <tr>
+                    <td class="Spotify">Spotify</td>
                 </tr>
                 <tr>
-                    <td>Youtube</td>
+                    <td class="X">X.com</td>
                 </tr>
                 <tr>
-                    <td>Spotify</td>
-                </tr>
-                <tr>
-                    <td>X.com</td>
-                </tr>
-                <tr>
-                    <td>Youtube</td>
+                    <td class="Youtube">Youtube</td>
                 </tr>
             </table>
         </main>
