--- a/code.html
+++ b/code.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <header>
-        LINKTREE
+        <strong>LINKTREE</strong>
     </header>
     <body>
         <main class="contain">
@@ -32,7 +32,7 @@
             </table>
         </main>
         <footer>
-                &copy;2025 WEB DEV Workshop.All Rights Reserved
+                <strong>&copy;2025 WEB DEV Workshop.All Rights Reserved </strong>
         </footer>
     </body>
 </html>
