--- a/code.html
+++ b/code.html
@@ -16,18 +16,18 @@
                     <td class="photo"><img class="singer-image" src="NaethanApollo.webp" alt="Singer"></td>
                 </tr>
                 <tr>
-                    <td class="Site"><img class="img" src="WhatsApp Image 2025-10-22 at 11.20.20_b5551fbe.jpg" alt="site"><a href="https://naethanapollo.com">Personal Site</a></td>
+                    <td class="Site"><img class="site_icon" src="Icon.jpg" alt="site"><a href="https://naethanapollo.com" target="_blank">Personal Site</a></td>
                 </tr>
                 <tr>
-                    <td class="Instagram"><img class="img" src="image.png" alt="Instagram"><a href="https://share.google/UvaUOITzFZnpnObSj">Instagram</a></td>
+                    <td class="Instagram"><img class="instagram_icon" src="image.png" alt="Instagram"><a href="https://share.google/UvaUOITzFZnpnObSj" target="_blank">Instagram</a></td>
                 <tr>
-                    <td class="Spotify"><img class="img" src="image copy.png" alt="Spotify"><a href="https://share.google/IoBUb3ORGA8tF0DD8">Spotify</a></td>
+                    <td class="Spotify"><img class="spotify_icon" src="imagecopy.png" alt="Spotify"><a href="https://share.google/IoBUb3ORGA8tF0DD8" target="_blank">Spotify</a></td>
                 </tr>
                 <tr>
-                    <td class="X"><img class="img" src="twitter.png" alt="Twitter"><a href="https://share.google/07Eoaw5l5SkrfzAvL">X.com</a></td>
+                    <td class="X"><img class="X_icon" src="twitter.png" alt="Twitter"><a href="https://share.google/07Eoaw5l5SkrfzAvL" target="_blank">X.com</a></td>
                 </tr>
                 <tr>
-                    <td class="Youtube"><img class="img" src="youtube.png" alt="Youtube"><a href="https://share.google/wUmnLNx3vto2aKVVn">Youtube</a></td>
+                    <td class="Youtube"><img class="youtube_icon" src="youtube.png" alt="Youtube"><a href="https://share.google/wUmnLNx3vto2aKVVn" target="_blank">Youtube</a></td>
                 </tr>
             </table>
         </main>
