--- a/code.html
+++ b/code.html
@@ -13,21 +13,26 @@
         <main class="contain">
             <table>
                 <tr>
-                    <td class="photo"><img class="singer-image" src="NaethanApollo.webp" alt="Singer"></td>
+                    <th colspan="2" class="photo"><img class="singer-image" src="NaethanApollo.webp" alt="Singer"></th>
                 </tr>
                 <tr>
-                    <td class="Site"><img class="site_icon" src="Icon.jpg" alt="site"><a href="https://naethanapollo.com" target="_blank">Personal Site</a></td>
+                    <td style="width: 220px;" class="Site"><img class="site_icon" src="Icon.jpg" alt="site"></td>
+                    <td  style="width: 220px;" class="site_link"><a href="https://naethanapollo.com" target="_blank">Personal Site</a></td>
                 </tr>
                 <tr>
-                    <td class="Instagram"><img class="instagram_icon" src="image.png" alt="Instagram"><a href="https://share.google/UvaUOITzFZnpnObSj" target="_blank">Instagram</a></td>
+                    <td class="Instagram"><img class="instagram_icon" src="image.png" alt="Instagram"></td>
+                    <td class="Instagram_link"><a href="https://share.google/UvaUOITzFZnpnObSj" target="_blank">Instagram</a></td>
                 <tr>
-                    <td class="Spotify"><img class="spotify_icon" src="imagecopy.png" alt="Spotify"><a href="https://share.google/IoBUb3ORGA8tF0DD8" target="_blank">Spotify</a></td>
+                    <td class="Spotify"><img class="spotify_icon" src="imagecopy.png" alt="Spotify"></td>
+                    <td class="Spotify_link"><a href="https://share.google/IoBUb3ORGA8tF0DD8" target="_blank">Spotify</a></td>
                 </tr>
                 <tr>
-                    <td class="X"><img class="X_icon" src="twitter.png" alt="Twitter"><a href="https://share.google/07Eoaw5l5SkrfzAvL" target="_blank">X.com</a></td>
+                    <td class="X"><img class="X_icon" src="twitter.png" alt="Twitter"></td>
+                    <td class="X_link"><a href="https://share.google/07Eoaw5l5SkrfzAvL" target="_blank">X.com</a></td>
                 </tr>
                 <tr>
-                    <td class="Youtube"><img class="youtube_icon" src="youtube.png" alt="Youtube"><a href="https://share.google/wUmnLNx3vto2aKVVn" target="_blank">Youtube</a></td>
+                    <td class="Youtube"><img class="youtube_icon" src="youtube.png" alt="Youtube"></td>
+                    <td class="Youtube_link"><a href="https://share.google/wUmnLNx3vto2aKVVn" target="_blank">Youtube</a></td>
                 </tr>
             </table>
         </main>
